Fix syntax.css spacing

--- a/src/syntax.css
+++ b/src/syntax.css
@@ -30,8 +30,6 @@ code[class*='language-'] ::selection {
   background: #e0e0e0;
 }
 pre[class*='language-'] {
-  padding: 1em;
-  margin: 0.5em 0;
   overflow: auto;
 }
 .token.comment,
